TH-1612 QA Erstatter noe bruk av Guava